@@ -14,7 +14,8 @@
   <a href="http://www.computermusic.co.uk">Computer Music Special</a>.
 </h2>
 
-<img src="@IMAGES@lilypond-book.png" align="right" alt="lilypond-book">
+<a href="@IMAGES@lilypond-book-small.png">
+<img src="@IMAGES@lilypond-book-small.png" align="right" alt="lilypond-book"></a>
 
 <dl>
   <dt>Tekstgebaseerde invoer</dt>
@@ -26,12 +27,11 @@
     De input kan worden opgeslagen en later opnieuw worden gebruikt.
   </dd>
 
-  <dt>Combineer muziek en tekst</dt>
-  <dd>
-    Met het hulpprogramma lilypond-book kun je naadloos bladmuziek
-    in LaTeX of HTML integreren.  Op basis van slechts één
-    bronbestand (het invoerbestand) is het mogelijk tekst met muziekfragmenten te produceren!
-  </dd>
+  <dt>Combineer muziek en tekst</dt> <dd> Met het hulpprogramma
+  lilypond-book kun je naadloos bladmuziek in LaTeX of HTML
+  integreren.  Op basis van slechts één bronbestand (het
+  invoerbestand) is het mogelijk tekst met muziekfragmenten te
+  produceren!  </dd>
 
   <dt>Losse partijen maken, nu nog makkelijker!</dt>
   <dd>
