@@ -44,11 +44,11 @@ Principal Cellist, New York Philharmonic</em>
 </div>
 
 <div style="overflow: hidden">
-<p class="boxout boxoutright"> 
-<img src="@IMAGES@/darius-blasband.jpeg">
-<br>
-Composer Darius Blasband  studying a
-LilyPond score.</p>
+<p class="boxout boxoutright"> <img
+src="@IMAGES@/darius-blasband.jpeg"> <br> Composer Darius Blasband
+studying a LilyPond score while recording <a
+href="http://www.thelegendofthetoad.com/">The Legend of the
+Toad</a>.</p>
 
 
 <p>
@@ -60,9 +60,7 @@ LilyPond score.</p>
 </p>
 <p align="right">
   <em>
-    Darius Blasband,
-    composer    (Brussels, Belgium)
-  </em>
+    Darius Blasband, composer (Brussels, Belgium) </em>
 </p>
 </div>
 
